[tool.poetry]
name = "lesson-13-1"
version = "0.1.0"
description = ""
authors = ["Viktor Shadrin <v.vshadrin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
